k8s/cat-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cats
  name: cats
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: cats
  type: ClusterIP
