k8s/cat-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cats
spec:
  path: "/"
  to:
    kind: Service
    name: cats
